--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,20 @@
 version: '3.8'
 
 services:
+  TestTaskSovkombankFront:
+    image: 'httpd:latest'
+    container_name: TestTaskSovkombankFront
+    volumes:
+      - ./TestTaskSovkombankFront:/usr/local/apache2/htdocs  
+    ports:
+      - 81:80
+    depends_on:
+      - TestTaskSovkonbankApi  
   TestTaskSovkonbankApi:
     image: 'test_task_sovkonbank_api:latest'
     build:
      context: ./TestTaskSovkombank
     container_name: TestTaskSovkombankApi
     ports:
-      - 8080:8080  
+      - 8081:8080  
+
